--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <p>eu trabalho com vendas online em plataformas de vendas em marketingplace</p>
 
 <div class="icons-social">
-<<a href="https://www.facebook.com/joaocarlos.costarodrigues.9"><i class="fab fa-facebook-f"></i></a>
+<a href="https://www.facebook.com/joaocarlos.costarodrigues.9"><i class="fab fa-facebook-f"></i></a>
 <a href="https://www.instagram.com/joao.rodrigues016/"><i class="fab fa-instagram"></i></a>
 </div>
 </section><!--descriçao-->
