--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
 <div class="content">
 <section class="descricao">
-<h2>carlos <span>eduardo</span></h2>
-<h3>rua angelo copeede ,191, Quintino facci 2. <span>unicarloseduardo@gmail.com</span></h3>
-<p>eu trabalho com vendas online em plataformas de vendas em marketingplace</p>
+<h2><span>João</span><span>Rodrigues</span></h2>
+<h3>Rua José Ventura ,361, Geraldo Correia de Carvalho. <span>joaocarloscostasjb2014@gmail.com</span></h3>
+<p>Atualmente estou terminando meu curso de programação</p>
 
 <div class="icons-social">
 <a href="https://www.facebook.com/joaocarlos.costarodrigues.9"><i class="fab fa-facebook-f"></i></a>
