--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 <p>Atualmente estou terminando meu curso de programação</p>
 
 <div class="icons-social">
-<a href="https://www.facebook.com/joaocarlos.costarodrigues.9"><i class="fab fa-facebook-f"></i></a>
-<a href="https://www.instagram.com/joao.rodrigues016/"><i class="fab fa-instagram"></i></a>
+<a href="https://www.facebook.com/joaocarlos.costarodrigues.9" target="_blank"><i class="fab fa-facebook-f"></i></a>
+<a href="https://www.instagram.com/joao.rodrigues016/" target="_blank"><i class="fab fa-instagram"></i></a>
 </div>
 </section><!--descriçao-->
 </div><!--content-->
